--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -568,7 +568,7 @@ block_distribution <- slot_data_prc_tbl %>%
                                       RPT_GRP_SEVNTEEN_C == 7 ~ "MSDMG", 
                                       RPT_GRP_SEVNTEEN_C == 8 ~ "MSBI",
                                       RPT_GRP_SEVNTEEN_C == 9 ~ "MSW", 
-                                      RPT_GRP_SEVNTEEN_C == 10 ~ "MSHS", 
+                                      RPT_GRP_SEVNTEEN_C == 10 ~ "MSHP", 
                                       RPT_GRP_SEVNTEEN_C == 11 ~ "MSM", 
                                       RPT_GRP_SEVNTEEN_C == 12 ~ "MSH- AMBULATORY CARE",
                                       RPT_GRP_SEVNTEEN_C == 13 ~ "NYEE", 
@@ -647,7 +647,7 @@ block_error <- slot_data_prc_tbl %>%
                                       RPT_GRP_SEVNTEEN_C == 7 ~ "MSDMG",
                                       RPT_GRP_SEVNTEEN_C == 8 ~ "MSBI",
                                       RPT_GRP_SEVNTEEN_C == 9 ~ "MSW",
-                                      RPT_GRP_SEVNTEEN_C == 10 ~ "MSHS",
+                                      RPT_GRP_SEVNTEEN_C == 10 ~ "MSHP", 
                                       RPT_GRP_SEVNTEEN_C == 11 ~ "MSM",
                                       RPT_GRP_SEVNTEEN_C == 12 ~ "MSH- AMBULATORY CARE",
                                       RPT_GRP_SEVNTEEN_C == 13 ~ "NYEE",
@@ -707,7 +707,7 @@ block_error <- block_error %>%
 #                                       RPT_GRP_SEVNTEEN_C == 7 ~ "MSDMG",
 #                                       RPT_GRP_SEVNTEEN_C == 8 ~ "MSBI",
 #                                       RPT_GRP_SEVNTEEN_C == 9 ~ "MSW",
-#                                       RPT_GRP_SEVNTEEN_C == 10 ~ "MSHS",
+#                                       RPT_GRP_SEVNTEEN_C == 10 ~ "MSHP", 
 #                                       RPT_GRP_SEVNTEEN_C == 11 ~ "MSM",
 #                                       RPT_GRP_SEVNTEEN_C == 12 ~ "MSH- AMBULATORY CARE",
 #                                       RPT_GRP_SEVNTEEN_C == 13 ~ "NYEE",
